--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ marshmallow>=3
 flask
 flask-restful
 flask-migrate
-flask-sqlalchemy
+flask-mysql
 flask-marshmallow
 flask-jwt-extended
 marshmallow-sqlalchemy
